--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/imgs/icon-login.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/imgs/icon-login.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Sistema de Gerenciamento de Tarefas">
   <link rel="stylesheet" href="./src/style/style.css">
